# simsopt

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  PERFORMANCE_AUDIT.md  README.md  STATUS.md  _jit_test_state.py  asv.conf.json  gpu_jax_pro.md  jax_full_suite_issue_audit_2026-04-07.md  jax_gpu_port_todos_2026-04-08.md  jax_hf_a100_issue_report_2026-03-28.md  jax_native_remaining_impl_plan_2026-04-24.md  jax_parity_reduction_todos_2026-04-10.md  jax_port_goal_prompt_2026-05-12.md  jax_seeded_target_lane_boozer_linear_solve_plan_2026-04-19.md  jax_single_stage_closure_plan_2026-04-13.md  jax_single_stage_parity_audit_2026-03-29.md  jax_upstream_merge_plan_2026-03-29.md  jax_upstream_merge_report_2026-03-29.md  lbfgs_ondevice_optimizer_candidate_plan_2026-04-26.md  pyproject.toml  repo_bootstrap.py  requirements.txt  test_single_stage_example_refactor_todos_2026-05-07.md  test_single_stage_example_refactor_todos_2026-05-07_v2.md
.artifacts/: legacy_vmec_bootstrap_stage2_seed_catalog.json
.gpd/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  state.json
benchmarks/: BASELINE.md  README.md  __init__.py  _cpp_compatible_probe.py  adjoint_fd_validation.py  adjoint_probe_common.py  benchmark_config.py  benchmark_problem.py  biot_savart_kernel_scaling.py  biotsavart_donation_probe.py  biotsavart_pallas_feasibility_probe.py  check_build_tools.py  cpp_baseline_benchmark.py  cpu_run_code_benchmark.py  dense_hessian_finalization.py  field_cache_hot_path_benchmark.cpp  field_cache_hot_path_benchmark.py  framedcurve_vjp_scaling.py  gpu_benchmark.py  gpu_run_code_benchmark.py  grouped_adjoint_memory_probe.py  jax_derivative_benchmark.py  jax_feasibility_spike.py  jax_multi_gpu_sharding_probe.py  non_banana_example_cpp_jax_cpu_parity.py  non_banana_example_parity_fixtures.py  optimistix_eval.py  pairwise_reduction_memory_analysis.py  parity_solve_quality.py  per_coil_unit_field_vmap_probe.py  production_boozer_parity_probe.py  regular_grid_skip_cell_map_benchmark.py  render_benchmark_report.py  run_code_benchmark_common.py  run_code_parity_probe.py  single_stage_backend_routing.py  single_stage_cpp_jax_state_parity.py  single_stage_dof_mapping_proof.py  single_stage_init_parity.py  single_stage_outer_loop_probe.py  (+12 more)
ci/: test.yml
conda.recipe/: meta.yaml
docs/: alm_constraint_normalization_block_penalty_impl_plan_2026-04-26.md  banana_cpp_cpu_dependency_manifest_2026-05-05.md  banana_jax_full_test_parity_coverage_impl_plan_2026-05-06.md  banana_jax_native_parity_completion_audit_2026-05-12.md  banana_jax_native_parity_goal_prompt_2026-05-12.md  banana_jax_native_port_todos_2026-05-05.md  banana_production_handoff_2026-05-19.md  banana_required_vs_full_upstream_surface_parity_impl_plan_2026-05-06.md  banana_single_stage_stage2_lavish_validation_plan_2026-04-27.md  boozer_bfgs_pre_newton_contract_impl_plan_2026-05-07.md  boozer_derivative_bit_identity_impl_plan_2026-05-07.md  boozer_derivative_bit_identity_zeroing_plan_2026-05-07.md  boozer_full_parity_plan_2026-05-04.md  boozer_hessian_cpp_oracle_parity_impl_plan_2026-05-05.md  cpp_jax_cpu_parity_drift_impl_plan_2026-05-07.md  cpu_cpp_jax_cpu_full_trajectory_parity_plan_2026-04-28.md  example_cpp_jax_cpu_gpu_parity_expansion_plan_2026-05-14.md  finite_current_ceiling_plan_2026-04-05.md  full_repo_banana_e2e_cpu_gpu_test_plan_2026-05-19.md  grouped_field_distribution_probe_2026-05-18.md  jax_mps_float32_parity_remediation_plan_2026-05-19.md  jax_multi_gpu_proof_2026-05-19.md  jax_native_round2_biotsavart_pallas_feasibility_2026-05-18.md  jax_native_round2_performance_todos_2026-05-18.md  jax_native_round3_curated_todos_2026-05-18.md  jax_native_round3_performance_todos_2026-05-18.md  jax_parity_manifest.md  jax_port_physicist_slide_brief_2026-05-15.md  jax_port_status_2026-05-15.md  jax_test_debugging.md  lbfgs_ondevice_full_jfx_bridge_report_2026-05-18.md  non_banana_example_cpp_jax_cpu_parity_plan_2026-05-12.md  non_banana_example_cpp_jax_cpu_parity_results_2026-05-12.md  parity_dual_mode_contract_2026-05-08.md  parity_scientific_equivalence_contract_2026-05-09.md  perlmutter_gpu_test_plan_2026-05-19.md  release_grade_cpp_jax_behavior_preservation_plan_2026-05-02.md  remaining_jax_port_surfaces_impl_plan_2026-05-19.md  runtime_dtype_policy_impl_plan_2026-05-19.md  scipy_lbfgsb_jax_parity_plan_2026-05-15.md  (+23 more)
envs/: columbia-jax-0.9.2.yml  (+3 more)
(+914 files in other folders)
